Closed Bug 1429133 Opened 8 years ago Closed 8 years ago

Firefox not displaying Unicode correctly

Categories

(Core :: Security: Process Sandboxing, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla59
Tracking Status
firefox58 --- fixed
firefox59 --- fixed

People

(Reporter: meridel, Assigned: haik)

Details

Attachments

(2 files)

Recently downloaded Quantum and unicode is not displaying correctly in many places. Not having this issue in Chrome. I'm using an iMAC, version 10.11.3, OS X El Capitan.
Assignee: general → nobody
Component: Bugzilla-General → Untriaged
Product: Bugzilla → Firefox
QA Contact: default-qa
Assignee: nobody → haftandilian
Component: Untriaged → Security: Process Sandboxing
Product: Firefox → Core
Hi Meridel, are you using a 3rd party font manager such as RightFont, Extensis Suitcase Fusion, or FontBase? That is often the cause of these issues, but we still need to fix Firefox so it works by default. There's a font diagnostic command you can run which will collect information about all your fonts and that should help us figure out why the sandbox is blocking access to a font. Disclaimer: the output will include the paths of all your fonts which might contain names of folders/files from your home directory you don't want to make public. If you'd rather not post that on the bug, feel free to email it to me. 1) Open the Terminal application in /Applications/Utilities 2) Run the following command. The command will write all your font config data to a file name system_profiler.fonts.txt on the desktop. It will overwrite the file if it exists on your Desktop already. system_profiler SPFontsDataType > ~/Desktop/system_profiler.fonts.txt 3) Email me, or attach to the bug, the system_profiler.fonts.txt file. I'm available on IRC as haik. Thanks!
Flags: needinfo?(mwalkington)
I got in touch with Meridel offline and the system in question is configured to use Font Explorer X and has approximately 40 fonts stored in "~/FontExplorer X/Font Library" with filename extensions that are not caught by our whitelist rules for content sandboxing. Bug 1393259 should address this problem, but it isn't ready to land/uplift yet. I think the best course of action is to land a whitelist rule for this font manager which would be low risk enough to uplift to beta.
Flags: needinfo?(mwalkington)
Adding "~/FontExplorer X/Font Library" should solve the problem for most FontExplorer users. FontExplorer does let the user choose another directory to manage their fonts, but most users probably use the default directory. Bug 1393259 is targeting build 60 and should eliminate the need to whitelist third party font directories.
Comment on attachment 8941563 [details] Bug 1429133 - Some FontExplorer managed fonts are not rendered. https://reviewboard.mozilla.org/r/211828/#review217634
Attachment #8941563 - Flags: review?(agaynor) → review+
Meridel tested a Nightly build with the fix and verified the problem was no longer reproducible.
Pushed by haftandilian@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/db0a461b3034 Some FontExplorer managed fonts are not rendered. r=Alex_Gaynor
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
Comment on attachment 8941563 [details] Bug 1429133 - Some FontExplorer managed fonts are not rendered. Approval Request Comment [Feature/Bug causing the regression]: Enabling of content sandbox read-access filesystem restrictions in bug 1332190. This problem occurs with some third party font managers when the user has activated fonts that do not have an .otf, .ttf., .dfont, .ttc, or .otc filename extension. Most users do not use third party font managers. Graphic designers typically use them. [User impact if declined]: Some fonts will not render and characters will be replaced by character-sized blocks, making the page unreadable. [Is this code covered by automated tests?]: Yes, the changed code is executed every time a content process is started, but interactions with font managers are not tested. [Has the fix been verified in Nightly?]: Yes [Needs manual test from QE? If yes, steps to reproduce]: No [List of other uplifts needed for the feature/fix]: None [Is the change risky?]: No [Why is the change risky/not risky?]: The patch changes the Mac sandbox rules in a minor way, making the sandbox slightly more permissive. Adding an additional allowance like this is unlikely to cause regressions. [String changes made/needed]: None
Attachment #8941563 - Flags: approval-mozilla-beta?
Comment on attachment 8941563 [details] Bug 1429133 - Some FontExplorer managed fonts are not rendered. Fix an issue that some fonts are not rendered. Beta58+.
Attachment #8941563 - Flags: approval-mozilla-release+
Attachment #8941563 - Flags: approval-mozilla-beta?
Attachment #8941563 - Flags: approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: