Bug 1429133 - Some FontExplorer managed fonts are not rendered. r=Alex_Gaynor

MozReview-Commit-ID: L5x3GNb3HGU